//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.server.command;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.server.procman";
option java_multiple_files = true;
option java_outer_classname = "CommandEventsProto";

import "spine/core/command.proto";

// This event is generated when instead of processing of the `source` command, two or
// more commands were produced.
//
// One of the use case scenarios is issuing several commands for creating several aggregate parts
// in response to one command which carries data for those parts.
//
message CommandSplit {
    option deprecated = true; // See spine.system.server.CommandSplit.

    // The command in response of which we post other commands.
    core.DispatchedCommand source = 1 [(required) = true];

    // Commands generated in response to the `source` command.
    //
    // There must be two or more produced commands.
    // For one produced command please use `CommandTransformed`.
    repeated core.DispatchedCommand produced = 2 [(required) = true];
}

// This event is generated when instead of processing the `source` command, another
// command was produced.
//
// A use case scenario would be to adapt commands from older client applications to new
// command API.
//
message CommandTransformed {
    option deprecated = true; // See spine.system.server.CommandTransformed.

    // The command in response of which we post other commands.
    core.DispatchedCommand source = 1 [(required) = true];

    // The command generated in response to the `source` command.
    core.DispatchedCommand produced = 2 [(required) = true];
}
